<resources>
    <string name="app_name">Group31</string>
    <string name="patient_id">Patient ID</string>
    <string name="id">ID</string>
    <string name="patient_age">Age</string>
    <string name="age">Age</string>
    <string name="patient_name">Patient Name</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="run">RUN</string>
    <string name="stop">STOP</string>
    <string-array name="sex_items">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
