<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aravind.group31.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patient_id_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_id"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/id_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patient_age_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_age"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/age_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patient_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sex_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sex_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_above="@+id/bottom">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/graph"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom"
        android:weightSum="2">

        <Button
            android:id="@+id/run_button"
            android:background="#009900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/run" />

        <Button
            android:id="@+id/stop_button"
            android:background="#CC0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop" />
    </LinearLayout>
</RelativeLayout>
